# humitifier

./: .editorconfig  .git-blame-ignore-revs  .gitignore  CITATION.cff  Dockerfile  Dockerfile.demo  Makefile  bump_version.py  contributing.md  dev.py  docker-compose.example.yaml  pyproject.toml  readme.md
agent/: Dockerfile  docker-compose.example.yaml  pyproject.toml
agent/entrypoint/: main.py
agent/humitifier/: config.py  tasks.py
agent/supabase/: config.toml
agent/supabase/migrations/: 20240229081901_init_tables.sql
humitifier-agent/: pyproject.toml
humitifier-agent/src/: cli.py
humitifier-agent/src/humitifier_agent/: constants.py  scanner.py  utils.py
humitifier-agent/src/humitifier_agent/celery_worker/: config.py  tasks.py
humitifier-agent/src/humitifier_agent/collectors/: generic.py  server.py
humitifier-agent/src/humitifier_agent/executor/: __init__.py  linux_shell.py
humitifier-common/: pyproject.toml
humitifier-common/src/humitifier_common/: scan_data.py
humitifier-common/src/humitifier_common/artefacts/: __init__.py  cli.py  generic.py  groups.py  server.py  special.py
humitifier-common/src/humitifier_common/celery/: task_names.py  task_routes.py
humitifier-common/src/humitifier_common/facts/: __init__.py  desktop.py  generic.py  registry.py  server.py  special.py
humitifier-common/src/humitifier_common/utils/: pydantic.py
humitifier-scanner/: Dockerfile  docker-compose.example.yaml  pyproject.toml
humitifier-scanner/build-support/: Ubuntu2004.Dockerfile
humitifier-scanner/docker/: celery_probe.sh  entrypoint.sh
humitifier-scanner/src/: cli.py
humitifier-scanner/src/humitifier_agent/: config.py  exceptions.py  logger.py
humitifier-scanner/src/humitifier_agent/celery_worker/: __init__.py  tasks.py
humitifier-scanner/src/humitifier_agent/collectors/: __init__.py
humitifier-scanner/src/humitifier_agent/executor/: linux_shell.py
humitifier-scanner/src/humitifier_scanner/: config.py  constants.py  exceptions.py  logger.py  scanner.py  utils.py
humitifier-scanner/src/humitifier_scanner/api/: __init__.py  client.py
humitifier-scanner/src/humitifier_scanner/celery_worker/: config.py  tasks.py
humitifier-scanner/src/humitifier_scanner/cli_commands/: __init__.py  artefact_parser.py  bulk_manual_scan.py  manual_scan.py
humitifier-scanner/src/humitifier_scanner/collectors/: __init__.py  cli.py  generic.py  server.py  special.py
humitifier-scanner/src/humitifier_scanner/executor/: __init__.py  linux_files.py  linux_shell.py  powershell.py  shared.py  windows_shell.py
humitifier-scanner/src/humitifier_scanner/parsers/: apache.py  nginx.py
humitifier-server/: Dockerfile  docker-compose.example.yaml  package.json  pyproject.toml  tailwind.config.js
humitifier-server/assets/css/: tailwind.input.css
humitifier-server/docker/: celery_probe.sh  entrypoint.sh  gunicorn.conf.py  run_in_venv.sh  scheduler_entrypoint.sh  server_entrypoint.sh  worker_entrypoint.sh
humitifier-server/src/: manage.py
humitifier-server/src/alerting/: apps.py  filters.py  forms.py  models.py  signals.py  tables.py  tasks.py  tests.py  urls.py  utils.py  views.py
humitifier-server/src/alerting/alerts/: __init__.py  generic.py  scan.py  server.py  special.py
humitifier-server/src/alerting/backend/: data.py  generator.py  registry.py
humitifier-server/src/alerting/migrations/: 0001_initial.py  0002_remove_alert_scan.py  0003_alter_alertacknowledgment_persistent.py
humitifier-server/src/api/: filters.py  forms.py  menus.py  models.py  permissions.py  router.py  scopes.py  serializers.py  tables.py  tasks.py  tests.py  urls.py  views.py
humitifier-server/src/api/fixtures/: test_api_client.json
humitifier-server/src/api/migrations/: 0001_initial.py  0002_alter_oauth2application_access_profile.py
humitifier-server/src/api/views/: __init__.py  applications.py  read.py  system.py
humitifier-server/src/hosts/: admin.py  alerts.py  filters.py  forms.py  json.py  menus.py  models.py  search.py  tables.py  tasks.py  tests.py  urls.py  utils.py  views.py
humitifier-server/src/hosts/fixtures/: test_data_source.json
humitifier-server/src/hosts/migrations/: 0001_initial.py  0002_alter_host_last_scan_cache_alter_host_last_scan_date.py  0003_alter_scan_host.py  0004_host_contact_host_department.py  0005_alert.py  0006_alter_host_options_host_os.py  0007_alter_alert_type.py  0008_host_archival_date_host_archived.py  0009_alter_host_created_at_alter_host_fqdn.py  0010_datasource_host_data_source.py  0011_datasource_identifier.py  0012_auto_20250108_1415.py  0013_auto_20250108_1415.py  0014_host_customer_alter_host_contact_and_more.py  0015_host_has_tofu_config.py  0016_host_otap_stage.py  0017_datasource_scan_scheduling.py  0018_datasource_default_scan_spec_host_scan_spec_override.py  0019_alter_host_os.py  0020_host_last_scan_scheduled.py  0021_alter_host_last_scan_cache_alter_scan_data.py  0022_delete_alert.py  0023_host_billable.py  0024_hostofflineperiod.py  0025_host_hypervisor.py  0026_savedsearch.py  0027_host_asset_tag.py
humitifier-server/src/hosts/scan_visualizers/: __init__.py  base_components.py  base_visualizer.py  empty.py  v1.py
humitifier-server/src/hosts/search/: __init__.py  field_discovery.py  query_builder.py  query_parser.py  types.py  value_extraction.py
humitifier-server/src/hosts/templatetags/: host_tags.py
humitifier-server/src/hosts/tests/: test_advanced_search.py  test_historical_clean.py
humitifier-server/src/hosts/utils/: __init__.py  build_scan_input.py  historical_clean.py  (+1 more)
humitifier-server/src/humitifier_server/: asgi.py  celery.py  env.py  logger.py  oidc_backend.py  settings.py  urls.py  wsgi.py
humitifier-server/src/main/: context_processors.py  filters.py  forms.py  menu_item.py  menus.py  models.py  stats.py  tables.py  tasks.py  urls.py  views.py
humitifier-server/src/reporting/: filters.py  forms.py  menus.py  models.py  tables.py  urls.py  views.py
humitifier-server/src/scanning/: filters.py  forms.py  menus.py  models.py  tables.py  tasks.py  tests.py  urls.py  utils.py  views.py
(+412 files in other folders)
