[tool.poetry]
name = "humitifier"
version = "0.1.0"
description = "Tools andi nterfaces for displaying HUM-IT resources"
authors = ["Donatas Rasiukevicius <d.rasiukevicius@uu.nl>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.93.0"
aiosql = "^7.2"
httpx = "^0.23.3"
prql-python = "^0.6.1"
uvicorn = "^0.21.1"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
pytest = "^7.2.2"
black = "^23.1.0"
faker = "^17.6.0"
bpython = "^0.24"

[tool.black]
line-length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
