[tool.poetry]
name = "humitifier"
version = "2.1.0"
description = "Tools and interfaces for displaying server resources"
authors = ["Donatas Rasiukevicius <d.rasiukevicius@uu.nl>"]


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.93.0"
uvicorn = "^0.21.1"
jinja2 = "^3.1.2"
toml = "^0.10.2"
parallel-ssh = "^2.12.0"
rocketry = "^2.5.1"
asyncpg = "^0.29.0"
sentry-sdk = { extras = ["fastapi"], version = "^1.41.0" }


[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
pytest = "^7.2.2"
black = "^23.1.0"
faker = "^17.6.0"
bpython = "^0.24"
pdbpp = "^0.10.3"
hypothesis-auto = "^1.1.5"

[tool.black]
line-length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
