[tool.poetry]
name = "humitifier-scanner"
version = "4.14.1"
description = ""
authors = ["Mees, T.D. (Ty) <t.d.mees@uu.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.14"
paramiko = "^4.0.0"
toml = "^0.10.2"
pydantic-settings = "^2.12.0"
humitifier-common = { path = "../humitifier-common", develop = true }
pyyaml = "^6.0.3"
sentry-sdk = {extras = ["celery"], version = "^2.22.0"}
reconfigure = "^0.1.82"
dnspython = "^2.8.0"

[tool.poetry.group.dev.dependencies]
black = "^25.12.0"
pyinstaller = "^6.17.0"

[tool.poetry.group.celery]
optional = true

[tool.poetry.group.celery.dependencies]
celery = {extras = ["redis"], version = "5.6.0"}

[tool.poetry.group.standalone]
optional = true

[tool.poetry.group.standalone.dependencies]
requests = "^2.32.5"
requests-oauthlib = "^2.0.0"
rich = "^14.3.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
