[tool.black]
target-version = [
    "py313",
]

[tool.poetry]
name = "humitifier-server"
version = "4.5.0"
description = ""
authors = [
    "Mees, T.D. (Ty) <t.d.mees@uu.nl>",
]

[tool.poetry.dependencies]
python = "^3.11"
django = "~5.1"
bpython = "^0.24"
django-braces = "^1.16.0"
djangorestframework = "^3.15.2"
django-filter = "^25.0"
markdown = "^3.7"
django-debug-toolbar = "^5.0.0"
django-simple-menu = "^2.1.3"
whitenoise = "^6.8.2"
sentry-sdk = {extras = ["celery", "django"], version = "^2.22.0"}
mozilla-django-oidc = "^4.0.1"
drf-spectacular = "^0.28.0"
django-oauth-toolkit = "^3.0.1"
celery = "5.5.2"
django-celery-beat = "^2.7.0"
django-celery-results = "^2.5.1"
cron-descriptor = "^1.4.5"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
psycopg2-binary = "^2.9.10"
faker = "^30.8.0"
humitifier-common = { path = "../humitifier-common",  develop = true }
flower = "^2.0.1"

[tool.poetry.group.production]
optional = true

[tool.poetry.group.production.dependencies]
psycopg2 = "^2.9.10"
gunicorn = "^23.0.0"
humitifier-common = { path = "../humitifier-common" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
