[tool.black]
target-version = [
    "py313",
]

[tool.poetry]
name = "humitifier-server"
version = "4.14.0"
description = ""
authors = [
    "Mees, T.D. (Ty) <t.d.mees@uu.nl>",
]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2"
bpython = "^0.26"
django-braces = "^1.17.0"
djangorestframework = "^3.16.1"
django-filter = "^25.2"
markdown = "^3.10"
django-debug-toolbar = "^6.1.0"
django-simple-menu = "^2.1.4"
whitenoise = "^6.11.0"
sentry-sdk = {extras = ["celery", "django"], version = "^2.47.0"}
mozilla-django-oidc = "^4.0.1"
drf-spectacular = "^0.29.0"
django-oauth-toolkit = "^3.1.0"
celery = {extras = ["redis"], version = "5.6.0"}
django-celery-beat = "^2.8.1"
django-celery-results = "^2.6.0"
cron-descriptor = "^2.0.6"
openpyxl = "^3.1.5"
psycopg = "^3.3.2"

[tool.poetry.group.dev.dependencies]
black = "^25.12.0"
psycopg-binary = "^3.3.2"
faker = "^38.2.0"
humitifier-common = { path = "../humitifier-common",  develop = true }
flower = "^2.0.1"

[tool.poetry.group.production]
optional = true

[tool.poetry.group.production.dependencies]
psycopg-c = "^3.3.2"
gunicorn = "^23.0.0"
humitifier-common = { path = "../humitifier-common" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
